fixed stylings, no screen overlaps in height and width

--- a/styles/output.css
+++ b/styles/output.css
@@ -578,6 +578,14 @@ video {
   height: 100vh;
 }
 
+.max-h-screen {
+  max-height: 100vh;
+}
+
+.min-h-screen {
+  min-height: 100vh;
+}
+
 .w-\[17vh\] {
   width: 17vh;
 }
